<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity2">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/biglogo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/curve_one"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/segoe_ui"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/Logintoyouraccount"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/curve"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:gravity="center"
                android:padding="20dp">

                <Button
                    android:id="@+id/fbBTN"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/fb" />

                <Button
                    android:id="@+id/ggBTN"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/gg" />

                <Button
                    android:id="@+id/ttBTN"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/tt" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/Oruseyouremailaccount"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_one"
                android:fontFamily="@font/segoe_ui"
                android:hint="@string/Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints="@string/Password"
                android:background="@drawable/edit_text_one"
                android:fontFamily="@font/segoe_ui"
                android:hint="@string/Password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textSize="21sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <ToggleButton
                    android:id="@+id/toggle"
                    android:layout_width="40dp"
                    android:layout_height="22dp"
                    android:background="@drawable/tg_btn"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:paddingStart="12dp"
                    android:text="@string/Rememberme" />

                <Button
                    android:id="@+id/forgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/segoe_ui"
                    android:paddingStart="75dp"
                    android:paddingEnd="10dp"
                    android:text="@string/ForgotPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="15sp" />

            </LinearLayout>
            <Button
                android:id="@+id/signInBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:text="@string/SignIn"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="21sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/blue"
                    android:textAllCaps="false"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/Donthaveanaccount"/>
                <Button
                    android:id="@+id/newHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:background="@color/transparent"
                    android:textSize="18sp"
                    android:text="@string/Registerhere"
                    android:paddingStart="50dp"/>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>