<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/biglogo"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="575dp"
        android:background="@drawable/curve"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/CreateNewAccount"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/segoe_ui"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textColor="@color/blue"
                android:letterSpacing="0.1"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_marginTop="24dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/second_curve"

                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@color/transparent"
                        >
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/fb"/>
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/gg"/>
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tt"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Oruseyouremailaccount"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:fontFamily="@font/segoe_ui"/>
                    <TextView
                        android:id="@+id/textEmail"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="21sp"
                        android:text="@string/Email"
                        android:textColor="@color/green"
                        android:paddingStart="40dp"
                        android:fontFamily="@font/segoe_ui"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_one"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Email"
                        android:fontFamily="@font/segoe_ui"
                        android:paddingStart="20dp"
                        android:textSize="21sp"
                        android:layout_marginLeft="20dp"/>
                    <TextView
                        android:id="@+id/textName"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="21sp"
                        android:text="@string/Name"
                        android:textColor="@color/green"
                        android:paddingStart="40dp"
                        android:fontFamily="@font/segoe_ui"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_one"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Name"
                        android:fontFamily="@font/segoe_ui"
                        android:paddingStart="20dp"
                        android:textSize="21sp"
                        android:layout_marginLeft="20dp"/>
                    <TextView
                        android:id="@+id/textPassword"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="21sp"
                        android:text="@string/Password"
                        android:textColor="@color/green"
                        android:paddingStart="40dp"
                        android:fontFamily="@font/segoe_ui"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_one"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Password"
                        android:fontFamily="@font/segoe_ui"
                        android:paddingStart="20dp"
                        android:textSize="21sp"
                        android:layout_marginLeft="20dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button"
                        android:text="@string/SignUp"
                        android:textColor="@color/green"
                        android:textSize="21sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:fontFamily="@font/segoe_ui"
                        android:layout_marginLeft="120dp"
                        android:layout_marginRight="120dp"
                        android:layout_marginBottom="40dp"/>




                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>